NOCC 1.5  ?? ??, ??

  Bugs
    * Bug #1793631 : Wrong $conf->base_url with non-default port
      (Arnaud Boudou).
    * Bug #1766528 : Blank headers because AIX iconv uses different names (Carey
      Evans).

  Patches
    * Patch #1786808 : Move JavaScript code to own file (Tim Gerundt).

  Misc
    * Add a new way to use 'user@domain' style logins (Arnaud Boudou).
    * Cut off long "From" addresses in inbox (Tim Gerundt).
    * Remove nested table from inbox opts menu (Tim Gerundt).
    * Change the way language list is displayed (Arnaud Boudou).
    * Welsh translation added (Sion Pennant).
    * Fix issues with server self provided details on login page
      (Arnaud Boudou).

NOCC 1.4  July 01, 2007

  Bugs
    * Bug #1629751 : Deleting mails reports "Could not connect to server" 
      (Arnaud Boudou).

  Patches
    * Patch #1742563 : Add time to mail view (Tim Gerundt).
    * Patch #1738781 : Use more flexible inbox table (Tim Gerundt).
    * Patch #1717436 : Show folder select only with more folders (Tim Gerundt).
    * Patch #1712388 : Prevent problems with base_url under windows (Tim
      Gerundt).
    * Patch #1706947 : Hide lang and theme select from login page (Tim Gerundt).
    * Patch #1682496 : Add "Unread" and "Attachment" as own column
      (Tim Gerundt).
    * Patch #1681769 : Use only one sorted arrow (Tim Gerundt).
    * Patch #1674343 : Missing translation for Dutch (openfan).
    * Patch #1663909 : Column order preference (Tim Gerundt).
    * Patch #1659330 : Optimize login box (Part 2) (Tim Gerundt).
    * Patch #1650480 : Use "min-width" for modern browsers (Tim Gerundt).
    * Patch #1650207 : Optimize header and footer (Tim Gerundt).
    * Patch #1649280 : Remove "global" <div> (Tim Gerundt).
    * Patch #1648561 : Remove needless CSS classes (Tim Gerundt).
    * Patch #1648196 : Use <label> for login box (Tim Gerundt).
    * Patch #1639027 : RSS: Add nocc_login as parameter (Tim Gerundt).